Fix title in index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset=utf-8>
-  <title>WebAudio006</title>
+  <title>WebAudio004 Envelope</title>
 </head>
 
 <body>
-  <h1>Frequency Modulation</h1>
+  <h1>Envelope</h1>
 
   <p>Playボタンで演奏が始まります。</p>
   <p>Killボタンで音が止まります。</p>
